Impl methods implemented, other classes and their tests adjusted