@@ -1,6 +1,9 @@
 package com.marketahalikova.fopengineweb.controllers;
 
 import com.marketahalikova.fopengineweb.commands.ProjectDTO;
+import com.marketahalikova.fopengineweb.exceptions.FopEngineException;
+import com.marketahalikova.fopengineweb.exceptions.GitException;
+import com.marketahalikova.fopengineweb.exceptions.XmlException;
 import com.marketahalikova.fopengineweb.model.Project;
 import com.marketahalikova.fopengineweb.services.ProjectService;
 import lombok.extern.slf4j.Slf4j;
@@ -10,6 +13,8 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+
+import java.util.Set;
 
 @Slf4j
 @Controller
@@ -22,16 +27,42 @@ public class ProjectController {
     }
 
     @GetMapping({"", "/", "/project"})
-    public String getIndexPage(Model model) {
+    public String getIndexPage(Model model) throws GitException, FopEngineException {
 
-        model.addAttribute("projectList", projectService.getProjects());
+        Set<Project> projects;
+        try {
+            projects = projectService.getProjects();
+        } catch (FopEngineException e) {
+            e.printStackTrace();
+            // TODO handle exception
+            throw new RuntimeException(e);
+        } catch (GitException e) {
+            e.printStackTrace();
+            throw new RuntimeException(e);
+            // TODO handle exception
+        }
+        log.debug("controller getProjects called");
+        model.addAttribute("projectList", projects);
 
         return "projectlist";
     }
 
     @GetMapping("/project/{id}/show")
-    public String showById(@PathVariable String id, Model model){
-        model.addAttribute("project", projectService.findById(new Long(id)));
+    public String showById(@PathVariable String id, Model model) {
+        Project project = null;
+        try {
+            project = projectService.getProjectById(new Long(id));
+        } catch (FopEngineException e) {
+            e.printStackTrace();
+            throw new RuntimeException(e);
+            // TODO handle exception
+        } catch (GitException e) {
+            e.printStackTrace();
+            throw new RuntimeException(e);
+            // TODO handle exception
+        }
+        log.debug("controller getProjectById called. Id=" + id);
+        model.addAttribute("project", project);
         return "project/show";
     }
 
@@ -45,33 +76,70 @@ public class ProjectController {
 
     @GetMapping("project/{id}/update")
     public String updateProject(@PathVariable String id, Model model){
-        model.addAttribute("project", projectService.findCommandById(Long.valueOf(id)));
-        log.debug("controller update Project called.");
-        return  "project/projectform";
+        ProjectDTO projectCommand = null;
+        try {
+            projectCommand = projectService.getProjectCommandById(new Long(id));
+        } catch (FopEngineException e) {
+            // TODO handle exception
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        } catch (GitException e) {
+            // TODO handle exception
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        }
+        model.addAttribute("project", projectCommand);
+        log.debug("controller edit Project called. Id=" + id);
+        return "project/projectform";
     }
 
     @PostMapping("project")
-    public String saveOrUpdateProject(@ModelAttribute ProjectDTO projectDTO) {
-        ProjectDTO savedProjectDTO;
-        if(projectDTO.getId()==null) {
-            savedProjectDTO = projectService.saveProjectCommand(projectDTO);
-            log.debug("controller new Project called. New Project id = " + savedProjectDTO.getId());
-            return "redirect:/project/" + savedProjectDTO.getId() + "/show";
-        } else {
-            Project tmp = projectService.findById(projectDTO.getId());
-            tmp.setDescription(projectDTO.getDescription());
-            Project savedProject = projectService.saveProject(tmp);
-            log.debug("controller update Project called. Updated Project id = " + savedProject.getId());
-            return "redirect:/project/" + savedProject.getId() + "/show";
+    public String saveOrUpdateProject(@ModelAttribute ProjectDTO projectCommand) {
+        try {
+            if (projectCommand.getId() == null) {
+                Project newProject = null;
+
+                newProject = projectService.registerNewProject(projectCommand);
+
+                log.debug("controller new Project called. New Project id = " + newProject.getId());
+                return "redirect:/project/" + newProject.getId() + "/show";
+            } else {
+                Project tmp = projectService.getProjectById(projectCommand.getId());
+                tmp.setDescription(projectCommand.getDescription());
+                Project savedProject = projectService.updateProject(tmp);
+                log.debug("controller update Project called. Updated Project id = " + savedProject.getId());
+                return "redirect:/project/" + savedProject.getId() + "/show";
+            }
+        } catch (FopEngineException e) {
+            // TODO handle exception
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        } catch (XmlException e) {
+            // TODO handle exception
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        } catch (GitException e) {
+            // TODO handle exception
+            e.printStackTrace();
+            throw new RuntimeException(e);
         }
     }
 
     @GetMapping("project/{id}/delete")
-    public String deleteById(@PathVariable String id){
+    public String deleteById(@PathVariable String id)  {
 
-        log.debug("Deleting project with id: " + id);
-
-        projectService.deleteById(Long.valueOf(id));
+        log.debug("Deleting project id:" + id);
+        try {
+            projectService.deleteProjectById(Long.valueOf(id));
+        } catch (FopEngineException e) {
+            // TODO handle exception
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        } catch (GitException e) {
+            // TODO handle exception
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        }
         return "redirect:/";
     }
 }
